--- a/backend/sensor/src/main/webapp/WEB-INF/web.xml
+++ b/backend/sensor/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,22 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
            version="3.0">
 
+    <env-entry>
+        <env-entry-name>server_web_host</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>localhost</env-entry-value>
+    </env-entry>
+
+    <env-entry>
+        <env-entry-name>server_web_port</env-entry-name>
+        <env-entry-type>java.lang.Integer</env-entry-type>
+        <env-entry-value>9000</env-entry-value>
+    </env-entry>
+
+    <env-entry>
+        <env-entry-name>server_web_path</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>/web</env-entry-value>
+    </env-entry>
+
 </web-app>
