Dog sim tweaks + add to docker container + supervisord

--- a/docker-sensor/etc/supervisord.conf
+++ b/docker-sensor/etc/supervisord.conf
@@ -40,6 +40,12 @@ command=%(ENV_JAVA)s
     -Djboss.home.dir="%(ENV_WILDFLY_HOME)s"
     -Djboss.server.base.dir="%(ENV_WILDFLY_BASE_DIR)s"
 
+[program:dogsim]
+command=/usr/bin/python /dogsim.py
+stdout_logfile=/var/log/%(program_name)s.log
+stderr_logfile=/var/log/%(program_name)s.log
+
+
 stdout_logfile=/var/log/%(program_name)s.log
 stderr_logfile=/var/log/%(program_name)s.error.log
 user=wildfly
