--- a/backend/sensor/src/main/webapp/WEB-INF/web.xml
+++ b/backend/sensor/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
     <env-entry>
         <env-entry-name>server_web_path</env-entry-name>
         <env-entry-type>java.lang.String</env-entry-type>
-        <env-entry-value>/web</env-entry-value>
+        <env-entry-value>/web/</env-entry-value>
     </env-entry>
 
 </web-app>
